Add token package and /users/login api

--- a/app.env
+++ b/app.env
@@ -1,3 +1,5 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://u1:pass1@localhost:5432/simple_bank?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:8080
+TOKEN_SYMMETRIC_KEY=qxEz48mYYXah50bObsdjcfhTSsYriHSw
+ACCESS_TOKEN_DURATION=15m
