--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,27 +40,17 @@ jobs:
         with:
           go-version: '^1.19'
 
-      - name: Install migrate
+      - name: Install tools
         run: |
-          version='v4.15.2'; curl -L https://github.com/golang-migrate/migrate/releases/download/${version}/migrate.linux-amd64.tar.gz | tar xvz
-          sudo mv migrate /usr/bin/migrate
+          go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@latest
+          go install github.com/kyleconroy/sqlc/cmd/sqlc@latest
+          go install github.com/golang/mock/mockgen@v1.6.0
 
-      - name: Migrate
-        run: make migrateup
-
-      - name: Install sqlc
+      - name: Setup
         run: |
-          version='1.15.0'; curl -L https://github.com/kyleconroy/sqlc/releases/download/v${version}/sqlc_${version}_linux_amd64.tar.gz | tar xvz
-          sudo mv sqlc /usr/bin/sqlc
-
-      - name: sqlc
-        run: make sqlc
-
-      - name: Install mockgen
-        run: go install github.com/golang/mock/mockgen@v1.6.0
-
-      - name: Generate mock
-        run: make mockgen
+          make migrateup
+          make sqlc
+          make mockgen
 
       - name: Test
         run: make test
